--- a/style.css
+++ b/style.css
@@ -465,6 +465,11 @@ a img {
   .search .entry:nth-child(even) {
     margin-right: 4.167%;
   }
+  .blog .post-header,
+  .archive .post-header,
+  .search .post-header {
+    text-align: left;
+  }
 
   .blog:not(.posts-page-1) .entry:nth-child(odd) {
     margin-right: 4.167%;
@@ -477,6 +482,9 @@ a img {
     width: 100%;
     float: none;
   }
+  .posts-page-1 .entry:first-of-type .post-header {
+    text-align: center;
+  }
   .posts-page-1 .entry:first-of-type .post-title {
     font-size: 3.188em;
     /* 51px / 16px */
@@ -486,10 +494,6 @@ a img {
   .posts-page-1 .entry:first-of-type .post-header,
   .posts-page-1 .entry:first-of-type .post-content {
     padding: 0 9.08406%;
-  }
-  .posts-page-1 .entry:not(:first-of-type) .post-header,
-  .posts-page-1 .entry:not(:first-of-type) .post-content {
-    text-align: left;
   }
 }
 @media all and (min-width: 68.75em) {
